antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__interrupt_preserves_unified_exec_wait_streak.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: snapshot
---
cells=1
• Interrupted.
