antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__pending_token_activity_refresh_renders_above_composer_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1585
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

/usage daily

 Token activity
   Loading...


 ┃ Ask Antex to do anything

  gpt-5.6-sol default · /tmp/project
